fix(receiver): qr size on mobile, attempt 0

--- a/qrs.css
+++ b/qrs.css
@@ -78,6 +78,7 @@ body {
 
   & img {
     width: 100%;
+    max-width: 80vw;
   }
 }
 
